docs: añadir README.md y actualizar contenido del HTML principal

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- PIE DE PÁGINA -->
     <footer>
-        <p>&copy; 2025 Mi app web</p>
+        <p>&copy; 2025 Juan Zabala</p>
     </footer>
 </body>
 
